fix: add links to educational qualifications for better context fix: update button styles for improved visibility and interaction

--- a/style.css
+++ b/style.css
@@ -951,13 +951,16 @@
 
 button {
     background-color: var(--body-bg-color);
-    border: var(--link-visited);
+    border-color: var(--link-visited);
+    border-radius: 4px;
+    border-width: 1px;
+    border-style: solid;
     color: var(--link-visited);
-    padding: 2px 4px;
+    padding: 16px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 20px;
+    font-size: 16px;
     margin: 2px 1px;
     cursor: pointer;
 }
